--- a/assets/templates/card.ejs
+++ b/assets/templates/card.ejs
@@ -26,7 +26,9 @@
     	<% } else if (rank == "2") { %>
     		<%=i+"<br><br>"+i%>
     	<% } else if (rank == "1") { %>
-            <%=i%>
+            <%=i+"<br><br>"+i%>
+        <% } else if (suit == "F") { %>
+            <%=i+"<br>hi<br>"+i%>
         <% } else { %>
     		<%=""%>
     	<% } %>
