--- a/assets/templates/card.ejs
+++ b/assets/templates/card.ejs
@@ -16,19 +16,35 @@
     	<% } else if (rank == "7") { %>
     		<%=i+" "+i+"hi<br>"+i+i+i+"<br>"+i+" "+i%>
     	<% } else if (rank == "6") { %>
-    		<%=i+" "+i+"hi<br>"+i+" "+i+"<br>"+i+" "+i%>
+    		<%=i+" "+i+"<br>"+i+" "+i+"<br>"+i+" "+i%>
     	<% } else if (rank == "5") { %>
-    		<%=i+" "+i+"hi<br>"+i+"<br>"+i+" "+i%>
+    		<%=i+" "+i+"<br>"+i+"<br>"+i+" "+i%>
     	<% } else if (rank == "4") { %>
-    		<%=i+" "+i+"hi<br><br>"+i+" "+i%>
+    		<%=i+" "+i+"<br><br>"+i+" "+i%>
     	<% } else if (rank == "3") { %>
     		<%=i+"<br>"+i+"<br>"+i%>
     	<% } else if (rank == "2") { %>
     		<%=i+"<br><br>"+i%>
     	<% } else if (rank == "1") { %>
             <%=i+"<br><br>"+i%>
-        <% } else if (suit == "F") { %>
-            <%=i+"<br>hi<br>"+i%>
+        <% } else if (rank == "Flower") { %>
+            <%="Flower"%>
+        <% } else if (rank == "Joker") { %>
+            <%="Joker"%>
+        <% } else if (rank == "Soap") { %>
+            <%="Soap"%>
+        <% } else if (rank == "Green") { %>
+            <%="Green"%>
+        <% } else if (rank == "Red") { %>
+            <%="Red"%>
+        <% } else if (rank == "N") { %>
+            <%="N"%>
+        <% } else if (rank == "S") { %>
+            <%="S"%>
+        <% } else if (rank == "W") { %>
+            <%="W"%>
+        <% } else if (rank == "E") { %>
+            <%="E"%>
         <% } else { %>
     		<%=""%>
     	<% } %>
