--- a/assets/templates/card.ejs
+++ b/assets/templates/card.ejs
@@ -1,42 +1,36 @@
 <% var i ="&"+suit+";" %>
 <div class="card rank-<%= rank.toLowerCase() %> <%= suit %>">
   <div class="front">
-    <div class="rank"><%= rank.toUpperCase() %></div>
+    <div class="rank" style="visibility: hidden"><%= rank.toUpperCase() %></div>
+    
     <div class="suit">
-    	<% if (rank == "F" || rank == "RD" || rank == "GD" ||rank == "SD" || rank == "NW" ||rank == "SW" ||rank == "EW" ||rank == "WW" ||rank == "J") { %>
-    		<%= i %>
-    	<% } %></div>
+    <%= i %> 
+    </div>
     <div class="icon">
-    	<% if (rank == "10") { %>
-    		<%=i+i+i+"<br>"+i+i+i+i+"<br>"+i+i+i%>
-    	<% } else if (rank == "9") { %>
+    	<% if (rank == "37" || rank == "38" || rank == "39" || rank == "40") { %>
     		<%=i+i+i+"<br>"+i+i+i+"<br>"+i+i+i%>
-    	<% } else if (rank == "8") { %>
+    	<% } else if (rank == "33" || rank == "34" || rank == "35" || rank == "36") { %>
     		<%=i+i+i+"<br>"+i+" "+i+"<br>"+i+i+i%>
-    	<% } else if (rank == "7") { %>
-    		<%=i+" "+i+"hi<br>"+i+i+i+"<br>"+i+" "+i%>
-    	<% } else if (rank == "6") { %>
+    	<% } else if (rank == "29" || rank == "30" || rank == "31" || rank == "32") { %>
+    		<%=i+" "+i+"<br>"+i+i+i+"<br>"+i+" "+i%>
+    	<% } else if (rank == "25" || rank == "26" || rank == "27" || rank == "28") { %>
     		<%=i+" "+i+"<br>"+i+" "+i+"<br>"+i+" "+i%>
-    	<% } else if (rank == "5") { %>
+    	<% } else if (rank == "21" || rank == "22" || rank == "23" || rank == "24") { %>
     		<%=i+" "+i+"<br>"+i+"<br>"+i+" "+i%>
-    	<% } else if (rank == "4") { %>
+    	<% } else if (rank == "17" || rank == "18" || rank == "19" || rank == "20") { %>
     		<%=i+" "+i+"<br><br>"+i+" "+i%>
-    	<% } else if (rank == "3") { %>
+    	<% } else if (rank == "13" || rank == "14" || rank == "15" || rank == "16" ) { %>
     		<%=i+"<br>"+i+"<br>"+i%>
-    	<% } else if (rank == "2") { %>
-    		<%=i+"<br><br>"+i%>
-    	<% } else if (rank == "1") { %>
+        <% } else if (rank == "9" || rank == "10" || rank == "11" || rank == "12" ) { %>
             <%=i+"<br><br>"+i%>
-        <% } else if (rank == "Flower") { %>
+    	<% } else if (rank == "5" || rank == "6" || rank == "7" || rank == "8" ) { %>
+    		<%=i+"<br><br>"%>
+    	<% } else if (rank == "1" || rank == "2" || rank == "3" || rank == "4" ) { %>
+            <%=i+"DR<br><br>"%>
+        <% } else if (rank == "F") { %>
             <%="FL"%>
-        <% } else if (rank == "Joker") { %>
+        <% } else if (rank == "J") { %>
             <%="Jo"%>
-        <% } else if (rank == "Soap") { %>
-            <%="WD"%>
-        <% } else if (rank == "Green") { %>
-            <%="GD"%>
-        <% } else if (rank == "Red") { %>
-            <%="RD"%>
         <% } else if (rank == "N") { %>
             <%="N"%>
         <% } else if (rank == "S") { %>
